--- a/LongoToDo/LongoToDo/LongoToDo/Resources/Resx/AppResources.resx
+++ b/LongoToDo/LongoToDo/LongoToDo/Resources/Resx/AppResources.resx
@@ -122,7 +122,34 @@
     <value>Loading</value>
   </data>
   <data name="MsgEmptyList" xml:space="preserve">
-    <value>No items to display. Check connection</value>
+    <value>No items to display. Check connection.</value>
+  </data>
+  <data name="TitleName" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="TitleToDoList" xml:space="preserve">
+    <value>To Do List</value>
+  </data>
+  <data name="PlaceholderName" xml:space="preserve">
+    <value>Name</value>
+  </data>
+  <data name="BtnNew" xml:space="preserve">
+    <value>New</value>
+  </data>
+  <data name="BtnOk" xml:space="preserve">
+    <value>Ok</value>
+  </data>
+  <data name="BtnCancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="MsgRequiredField" xml:space="preserve">
+    <value>Required field</value>
+  </data>
+  <data name="Info" xml:space="preserve">
+    <value>Infomation</value>
+  </data>
+  <data name="Error" xml:space="preserve">
+    <value>Error</value>
   </data>
 </root>
 
